--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@ h1{font-size:2.6rem;margin-bottom:5px}
 .subtitle{font-size:1.1rem;margin-bottom:10px}
 .countdown{font-size:1.2rem;margin-bottom:15px}
 .controls{margin-bottom:15px}
-button.music,button.unlock{background:white;border:none;border-radius:20px;padding:8px 18px;color:#ff4f7a;font-weight:bold;cursor:pointer;margin:5px}
+button.music{background:white;border:none;border-radius:20px;padding:8px 18px;color:#ff4f7a;font-weight:bold;cursor:pointer;margin:5px;transition:.3s}
+button.unlock{background:white;border:none;border-radius:20px;padding:8px 18px;color:#ff4f7a;font-weight:bold;cursor:pointer;margin:5px}
 .days{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:18px;max-width:950px;margin:auto}
 .day-card{background:rgba(255,255,255,.2);border-radius:20px;padding:20px 10px;cursor:pointer;backdrop-filter:blur(10px);box-shadow:0 12px 25px rgba(0,0,0,.25);transition:.3s}
 .day-card:hover{transform:scale(1.08);background:rgba(255,255,255,.3)}
 .day-card.locked{opacity:.4;pointer-events:none}
 .section{margin-top:40px}
-.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(120px,1fr));gap:12px;max-width:700px;margin:auto}
-.photo{background:rgba(255,255,255,.25);border-radius:15px;padding:40px 10px}
 .popup,.date-popup{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;align-items:center;justify-content:center;z-index:10}
 .popup-content{background:linear-gradient(135deg,#ff7aa8,#ffb3d1);padding:35px;border-radius:25px;max-width:420px;animation:pop .4s ease;box-shadow:0 20px 40px rgba(0,0,0,.4)}
 input{padding:10px;border:none;border-radius:10px;width:200px;text-align:center}
@@ -36,6 +35,7 @@ input{padding:10px;border:none;border-radius:10px;width:200px;text-align:center}
 <h1>For My Sana 💕</h1>
 <div class="subtitle">Unlock our love by remembering our first meet ❤️</div>
 <div class="controls">
+<div id="songTitle" style="font-weight:bold;margin-bottom:6px">🎶 Aaj Fir Tum Pe Pyaar Aaya Hai</div>
 <button class="unlock" onclick="openDatePopup()">🔐 Unlock Surprises</button>
 <button class="music" onclick="toggleMusic()">🎵 Play Music</button>
 </div>
@@ -51,11 +51,6 @@ input{padding:10px;border:none;border-radius:10px;width:200px;text-align:center}
 <div class="day-card locked" data-day="13" onclick="openCard(7)">💋 Kiss Day<br>13 Feb</div>
 <div class="day-card locked" data-day="14" onclick="openCard(8)">❤️ Valentine Day<br>14 Feb</div>
 </div>
-
-
-</div>
-
-
 
 <div class="section">
 <h2>⏳ Together Since</h2>
@@ -87,7 +82,7 @@ input{padding:10px;border:none;border-radius:10px;width:200px;text-align:center}
 <div class="love-popup" id="lovePop"></div>
 
 <audio id="music" loop>
-<source src="https://cdn.pixabay.com/audio/2023/02/14/audio_7dcb7d2d1a.mp3" type="audio/mpeg">
+<source src="aaj-fir-tum-pe-pyaar-aaya.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -188,12 +183,27 @@ setInterval(createHeart,300);
 const music=document.getElementById('music');
 music.volume = 0.7;
 let playing=false;
+function fadeVolume(target){
+ let step = target>music.volume?0.05:-0.05;
+ const i=setInterval(()=>{
+  music.volume=Math.max(0,Math.min(1,music.volume+step));
+  if((step>0 && music.volume>=target)||(step<0 && music.volume<=target)) clearInterval(i);
+ },80);
+}
+
 function toggleMusic(){
+ const btn=document.querySelector('.music');
  if(!playing){
   music.load();
-  const p = music.play();
-  if(p) p.catch(()=>{});
- } else music.pause();
+  music.volume=0;
+  music.play().catch(()=>{});
+  fadeVolume(0.7);
+  btn.innerText='⏸ Pause Music';
+ } else {
+  fadeVolume(0);
+  setTimeout(()=>music.pause(),800);
+  btn.innerText='🎵 Play Music';
+ }
  playing=!playing;
 }
 
@@ -218,8 +228,6 @@ setInterval(()=>{
  p.style.display='block';
  setTimeout(()=>p.style.display='none',3000);
 },8000);
-
-
 
 const meetDateObj=new Date(2025,10,15);
 function updateLoveTimer(){
@@ -247,6 +255,8 @@ console.assert(correctDate === '15/11/2025','Correct date should be set');
 console.assert(typeof checkDate === 'function','checkDate should exist');
 console.assert(cards[1].title.includes('Rose'),'Card data should load');
 console.assert(Array.isArray(loveLines),'loveLines should be array');
+console.assert(typeof toggleMusic === 'function','toggleMusic should exist');
+console.assert(typeof updateCountdown === 'function','updateCountdown should exist');
 </script>
 </body>
 </html>
